<resources>
    <string name="app_name">Intents comunes</string>
    <string name="alarma">Alarma</string>
    <string name="contador">Contador</string>
    <string name="contador">Contador</string>
    <string name="fotografia">Fotografía</string>
    <string name="email">E-mail</string>
    <string name="mapa">Mapa</string>
    <string name="telefono">Teléfono</string>
    <string name="intents_comunes">Intents comunes</string>
</resources>